Notificaciones de Edificios WIP

--- a/stib-administraciones/templates/dashboard/index.html
+++ b/stib-administraciones/templates/dashboard/index.html
@@ -10,7 +10,7 @@
         <div class="col-lg-6">
             <div class="panel panel-primary"><!-- notas tecnicas -->
                 <div class="panel-heading">
-                    <i class="fa fa-file-text-o fa-fw"></i> Últimas Notas Técnicas
+                    <i class="fa fa-file-text-o fa-fw"></i> Últimas notas técnicas sobre Edificios
                 </div>
                 <div class="panel-body dashboard_block_panel">
                     {% for nt in notas_tecnicas %}
@@ -45,7 +45,7 @@
         <div class="col-lg-6">
             <div class="panel panel-primary"><!-- notificaciones de clientes -->
                 <div class="panel-heading">
-                    <i class="fa fa-bullhorn fa-fw"></i> Últimas Notificaciones de mis Clientes
+                    <i class="fa fa-bullhorn fa-fw"></i> Sugerencias para mis edificios
                 </div>
                 <div class="panel-body dashboard_block_panel">
                     {% for ne in notificaciones_edificios %}
@@ -93,7 +93,7 @@
             </div><!-- / notificaciones de clientes -->
             <div class="panel panel-primary"><!-- mis ultimas notificaciones -->
                 <div class="panel-heading">
-                    <i class="fa fa-bullhorn fa-fw"></i> Mis Últimas notificaciones
+                    <i class="fa fa-bullhorn fa-fw"></i> Novedades de Stib
                 </div>
                 <div class="panel-body dashboard_block_panel">
                     {% for nu in notificaciones_usuarios %}
