--- a/stib-administraciones/templates/emails/email_cambio_estado_nota_tecnica_notificaciones.html
+++ b/stib-administraciones/templates/emails/email_cambio_estado_nota_tecnica_notificaciones.html
@@ -1,8 +1,10 @@
 La administración <b>"{{administracion}}"</b> ha realizado un cambio de estado
 en una de sus notas técnicas:
 <br><br>
-<b>Edificio:</b> {{edificio}}
-<br>
+{% if edificio %}
+    <b>Edificio:</b> {{edificio}}
+     <br>
+{% endif %}
 <b>Estado:</b> {{estado}}
 <br>
 <b>Enviada el día:</b> {{fecha|date:"SHORT_DATE_FORMAT"}}
