Notificaciones de edificios en pagina principal

--- a/stib-administraciones/templates/dashboard/index.html
+++ b/stib-administraciones/templates/dashboard/index.html
@@ -146,5 +146,5 @@
 
 {% block css %}
     {{ block.super }}
-    <link href="{% static 'css/dashboard.css' %}" rel="stylesheet">
+    <link href="{% static 'css/notificaciones.css' %}" rel="stylesheet">
 {% endblock css %}
